Resume, Header, Easter eggs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simxn999.github.com",
+  "name": "simxn999.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
